# it-glue-mcp-project

./: .env.example  .gitignore  .pre-commit-config.yaml  .tree  CLAUDE.md  Dockerfile  FOLDER_IMPLEMENTATION_SUMMARY.md  FRONTEND_STATUS.md  Makefile  PROJECT_STRUCTURE.md  README.md  TEST_COVERAGE_FIX_PLAN.md  alembic.ini  claude.md  debug_streamlit_flexible_assets.py  discover_config_types.py  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  faucets_infrastructure_complete.md  generate_embeddings_nomic.py  infrastructure_doc_BAWSO_Ltd.md  populate_neo4j_graph.py  pyproject.toml  quick_fix_test.py  simple_sync_test.py
.bmad-core/: install-manifest.yaml
.streamlit/: config.toml
PRPs/: it-glue-query-enhancement.md  itglue-mcp-server-implementation.md
alembic/: env.py
alembic/versions/: 20250830_1217-23ad7dcf2579_initial_schema.py  20250901_2302-3717823b23b8_add_infrastructure_documentation_tables.py
docs/: ARCHITECTURE_DECISIONS.md  DATA_FLOW_DIAGRAM.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENT_CLEANUP_PLAN.md  EMBEDDINGS_CONFIGURATION.md  FAUCETS_DOCUMENT_EXTRACTION.md  FIX_STATUS.md  IMPLEMENTATION_FIXES_REFERENCE.md  IT-Glue-Query-Enhancement-Architecture.md  IT-Glue-Query-Enhancement-Project-Brief.md  IT_GLUE_API_LIMITATIONS.md  IT_GLUE_SUPPORTED_QUERIES.md  MCP_TOOL_SIGNATURES.md  PRD-Query-Coverage-Enhancement.md  QUICK_START.md  README.md  SECURITY_AUDIT_REPORT.md  TRIPLE_DATABASE_INTEGRATION.md  api-integration-specification.md  backend-architecture.md  brainstorming-session-results.md  brief.md  brownfield-architecture.md  bug-report-query-tool-filtering.md  deployment-guide.md  development-workflow-guide.md  frontend-architecture.md  fullstack-architecture.md  implementation-guide.md  infrastructure-documentation.md  it-glue-api-examples.py  mcp-tool-testing.md  query_enhancement.md  security-compliance-documentation.md  testing-documentation.md  user-guide.md
docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
docs/stories/: epic-1.1-database-integration-mcp-tools.md
examples/: query_software_folder.py
mcp/: __init__.py
mcp/server/: __init__.py  stdio.py
monitoring/: prometheus-clean.yml  prometheus.yml
monitoring/prometheus/: alerts.yml
prd/: IT-Glue-Query-Enhancement-PRD.md  product-requirements-document.md
scripts/: check_infrastructure_tables.py  diagnose_document_sync.py  examine_security_document.py  init-db.sql  init_neo4j.py  init_postgres_extras.py  init_qdrant.py  search_all_documents.py  search_conditional_access.py  sync_all_organizations.py  sync_faucets_documents.py  sync_faucets_integrated.py  test_complete_rag.py  test_compliance_document.py  test_document_api.py  test_fixed_threshold.py  test_infrastructure_doc.py  test_live_folder_access.py  test_query_answers.py  test_rag_query.py  verify_databases.py
src/: __init__.py  celery_app.py
src/api/: __init__.py  app.py
src/cache/: __init__.py  cache_warmer.py  manager.py  redis_cache.py  redis_fuzzy_cache.py  strategies.py
src/config/: settings.py
src/context/: __init__.py  session_manager.py
src/database/: indexing.py  neo4j_setup.py
src/embeddings/: __init__.py  generator.py  manager.py
src/graph/: __init__.py  graph_traversal.py
src/infrastructure/: __init__.py  data_normalizer.py  document_generator.py  documentation_handler.py  progress_tracker.py  query_orchestrator.py
src/mcp/: __init__.py  __main__.py  server.py  websocket_server.py
src/ml/: __init__.py  query_learning.py  smart_suggestions.py
src/monitoring/: __init__.py  health.py  logging.py  metrics.py  metrics_collector.py  query_performance.py  tracing.py
src/nlp/: __init__.py  entity_extractor.py  intent_classifier.py
src/query/: __init__.py  asset_type_handler.py  documents_handler.py  engine.py  flexible_assets_handler.py  fuzzy_enhancer.py  fuzzy_matcher.py  fuzzy_matcher_optimized.py  intelligent_query_processor.py  intelligent_query_processor_monitored.py  locations_handler.py  neo4j_query_builder.py  neo4j_query_builder_enhanced.py  organizations_handler.py  parser.py  performance_optimizer.py  phonetic_matcher.py  query_templates.py  validator.py
src/ranking/: __init__.py  result_ranker.py
src/search/: __init__.py  hybrid.py  semantic.py  unified_hybrid.py
src/services/: cache.py
src/sync/: __init__.py  incremental.py  itglue_sync.py  orchestrator.py
src/tasks/: embedding_tasks.py  sync_tasks.py
src/transformers/: base.py  graph_transformer.py  itglue_transformers.py
src/ui/: streamlit_app.py
src/utils/: logging.py
tests/: __init__.py  conftest.py  test_flexible_assets_handler.py
tests/codeexamples/: README.md  confidence_threshold_tuning.py  document_sync_example.py  folder_documents_example.py  rag_query_example.py
tests/fixtures/: __init__.py  mock_data.py  mock_itglue_client.py  test_data.py
tests/integration/: test_mcp_protocol.py  (+1 more)
(+133 files in other folders)
